--- a/4_viikko/responsive/css/style.css
+++ b/4_viikko/responsive/css/style.css
@@ -1,12 +1,12 @@
-:root{
---dark-background-color: #333;
---light-background-color: #f5f5f5;
---dark-foreground-color:#000;
---light-foreground-color:#fff;
---grey-foreground-color: #ccc;
---accent-color: #6D0509;
---general-padding: 2em;
---general-margin: 1em;
+:root {
+    --dark-background-color: #333;
+    --light-background-color: #f5f5f5;
+    --dark-foreground-color: #000;
+    --light-foreground-color: #fff;
+    --grey-foreground-color: #ccc;
+    --accent-color: #6D0509;
+    --general-padding: 2em;
+    --general-margin: 1em;
 }
 
 * {
@@ -16,16 +16,18 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
-*,*::before, *::after {
+*,
+*::before,
+*::after {
     box-sizing: border-box;
 }
 
-a{
+a {
     text-decoration: none;
-    
+
 }
 
-a:hover{
+a:hover {
     color: var(--accent-color);
     font-weight: bold;
 }
@@ -36,22 +38,22 @@ div#container {
     margin: var(--general-margin);
 }
 
-div#content{
+div#content {
     display: inherit;
 }
 
-div#content section{
+div#content section {
     width: 80vw;
     display: inherit;
     flex-direction: row;
     flex-wrap: wrap;
 }
 
-div#content aside{
+div#content aside {
     width: 20vw;
 }
 
-header{
+header {
     display: inherit;
     justify-content: center;
     align-items: center;
@@ -62,13 +64,22 @@ header h1 {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
-article{
+article {
     flex: 33.33%;
 }
 
 article div {
     margin: var(--general-margin);
     border: 1px solid var(--grey-foreground-color);
+}
+
+article h3 {
+    margin: var(--general-margin);
+}
+
+article p {
+    margin: var(--general-margin);
+    line-height: 1.5;
 }
 
 article div img {
@@ -78,7 +89,8 @@ article div img {
     object-position: center;
 }
 
-nav{
+
+nav {
     display: inherit;
     align-items: center;
     border-top: 1pc solid var(--dark-foreground-color);
@@ -95,6 +107,7 @@ nav li {
     width: 5em;
     margin-right: var(--general-margin);
 }
+
 aside {
     padding: var(--general-padding);
     padding-top: calc(var(--general-padding)*1.5);
@@ -112,8 +125,8 @@ footer p {
     color: var(--light-foreground-color);
 }
 
-@media only screen and (max-width: 1200px){
-    div#content{
+@media only screen and (max-width: 1200px) {
+    div#content {
         flex-direction: column;
     }
 
@@ -137,9 +150,9 @@ footer p {
     }
 }
 
-@media only screen and (max-width: 992px){
+@media only screen and (max-width: 992px) {
     div#content section {
         flex-direction: column;
     }
-    
+
 }
