--- a/4_viikko/scss/css/_reset.scss
+++ b/4_viikko/scss/css/_reset.scss
@@ -1,17 +1,20 @@
-*{
+* {
     margin: 0;
     padding: 0;
     color: $dark-foreground-color;
     font-family: Arial, Helvetica, sans-serif;
 }
 
-*,*::before, *::after{
+*,
+*::before,
+*::after {
     box-sizing: border-box;
 }
 
-a{
+a {
     text-decoration: none;
-    &:hover{
+
+    &:hover {
         color: $accent-color;
         font-weight: bold;
     }
