--- a/4_viikko/scss/css/style.css
+++ b/4_viikko/scss/css/style.css
@@ -5,7 +5,9 @@
   font-family: Arial, Helvetica, sans-serif;
 }
 
-*, *::before, *::after {
+*,
+*::before,
+*::after {
   box-sizing: border-box;
 }
 
